<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015, Nordic Semiconductor
  ~ All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without
  ~ modification, are permitted provided that the following conditions are met:
  ~
  ~ * Redistributions of source code must retain the above copyright notice, this
  ~   list of conditions and the following disclaimer.
  ~
  ~ * Redistributions in binary form must reproduce the above copyright notice,
  ~   this list of conditions and the following disclaimer in the documentation
  ~   and/or other materials provided with the distribution.
  ~
  ~ * Neither the name of copyright holder nor the names of its
  ~   contributors may be used to endorse or promote products derived from
  ~   this software without specific prior written permission.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
  ~ AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
  ~ IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
  ~ DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
  ~ FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
  ~ DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
  ~ SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
  ~ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
  ~ OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
  ~ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->

<android.support.design.widget.CoordinatorLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	app:layout_behavior="@string/appbar_scrolling_view_behavior"
	tools:context=".ScannerActivity"
	tools:ignore="ContentDescription">

	<android.support.constraint.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<android.support.design.widget.AppBarLayout
			android:id="@+id/appbar_layout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:theme="@style/AppTheme.AppBarOverlay">

			<android.support.v7.widget.Toolbar
				android:id="@+id/toolbar"
				android:layout_width="match_parent"
				android:layout_height="?actionBarSize"
				android:background="?attr/colorPrimary"
				app:popupTheme="@style/AppTheme.PopupOverlay"/>

			<ProgressBar
				android:id="@+id/state_scanning"
				style="?android:attr/progressBarStyleHorizontal"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="-7dp"
				android:layout_marginTop="-8dp"
				android:indeterminate="true"
				android:indeterminateTint="@android:color/white"
				android:visibility="invisible"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="@+id/recycler_view_ble_devices"/>

		</android.support.design.widget.AppBarLayout>

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:layout_centerHorizontal="true"
			android:layout_marginBottom="8dp"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="8dp"
			android:scaleType="center"
			android:src="@drawable/background_title"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"/>

		<android.support.v7.widget.RecyclerView
			android:id="@+id/recycler_view_ble_devices"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:clipToPadding="false"
			android:paddingBottom="@dimen/activity_vertical_margin_bottom"
			android:paddingTop="@dimen/activity_vertical_margin_top"
			android:scrollbars="none"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/appbar_layout"/>

		<LinearLayout
			android:id="@+id/no_devices"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:paddingEnd="@dimen/activity_horizontal_margin"
			android:paddingStart="@dimen/activity_horizontal_margin"
			android:visibility="gone"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/appbar_layout">

			<ImageView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:padding="@dimen/activity_horizontal_margin"
				android:src="@drawable/ic_bluetooth_searching"/>

			<TextView
				style="@style/Widget.ScannerSubtitle"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_horizontal"
				android:text="@string/blinky_guide_title"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/activity_vertical_margin"
				android:text="@string/blinky_guide_info"/>

			<LinearLayout
				android:id="@+id/no_location"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:visibility="invisible">

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="@dimen/activity_vertical_margin"
					android:text="@string/blinky_guide_location_info"/>

				<Button
					android:id="@+id/action_enable_location"
					style="@style/Widget.AppCompat.Button.Borderless.Colored"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					android:text="@string/blinky_guide_location_action"/>
			</LinearLayout>
		</LinearLayout>

		<LinearLayout
			android:id="@+id/bluetooth_off"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:paddingEnd="@dimen/activity_horizontal_margin"
			android:paddingStart="@dimen/activity_horizontal_margin"
			android:visibility="gone"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/appbar_layout">

			<ImageView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:padding="@dimen/activity_horizontal_margin"
				android:src="@drawable/ic_bluetooth_disabled"/>

			<TextView
				style="@style/Widget.ScannerSubtitle"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_horizontal"
				android:text="@string/bluetooth_disabled_title"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/activity_vertical_margin"
				android:gravity="center_horizontal"
				android:text="@string/bluetooth_disabled_info"/>

			<Button
				android:id="@+id/action_enable_bluetooth"
				style="@style/Widget.AppCompat.Button.Borderless.Colored"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_marginTop="@dimen/activity_vertical_margin"
				android:text="@string/bluetooth_disabled_action"/>
		</LinearLayout>

		<LinearLayout
			android:id="@+id/no_location_permission"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:paddingEnd="@dimen/activity_horizontal_margin"
			android:paddingStart="@dimen/activity_horizontal_margin"
			android:visibility="visible"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/appbar_layout">

			<ImageView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:padding="@dimen/activity_horizontal_margin"
				android:src="@drawable/ic_location_off"/>

			<TextView
				style="@style/Widget.ScannerSubtitle"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_horizontal"
				android:text="@string/location_permission_title"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/activity_vertical_margin"
				android:layout_marginTop="@dimen/activity_vertical_margin"
				android:text="@string/location_permission_info"/>

			<Button
				android:id="@+id/action_grant_location_permission"
				style="@style/Widget.AppCompat.Button.Borderless.Colored"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:text="@string/location_permission_action"/>

			<Button
				android:id="@+id/action_permission_settings"
				style="@style/Widget.AppCompat.Button.Borderless.Colored"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:text="@string/location_permission_settings"
				android:visibility="gone"/>
		</LinearLayout>

	</android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>